# translator-rs

./: .tasks  Cargo.toml  README.md  dev.md
.github/workflows/: ci.yml
src/: main.rs  opt.rs  translator.rs
src/translator/: bing.rs  ciba.rs  youdao.rs
