[package]
name = "translator"
version = "0.1.0"
authors = ["voldikss <dyzplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
rustc-serialize = "*"
log = "*"
env_logger = "*"
getopts = "*"
ansi_term = "*"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
