[package]
name = "translator"
version = "0.1.0"
authors = ["voldikss <dyzplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.22"
md5 = "0.7.0"
regex = "1.3.6"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.12"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
